--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -7,12 +7,22 @@
     top:0;
     right:0
 }
-.HeaderBtn{
+
+li{
     display: inline-block;
     margin-right: 40px;
     border: none;
-    color: black;
-    font-size: 20px;
     background-color: white;
     text-decoration: none;
+    z-index: 100;
+}
+li:hover{
+    transform: scale(1.1);
+}
+a{
+    color: black;
+    font-size: 4vh;
+    text-decoration: none;
+
+
 }
