--- a/src/CSS/Projects.css
+++ b/src/CSS/Projects.css
@@ -1,7 +1,7 @@
 .Line{
     border-top: 2px solid black;
 }
-.ProjectsSubHeading{
+.ProjectSubHeading{
     position: relative;
     font-size: 7vh;
     font-weight: 200;
@@ -29,6 +29,7 @@ img{
 }
 .ProjectInfo{
     text-align: center;
+    max-width: 35%;
     
 }
 .Link{
